# research-template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yml  m1-compatibility.yml  tests.yml
