[project]
name = "poi-recommendation-research"
version = "0.1.0"
description = "POI推薦と情報推薦に関する研究プロジェクト"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["poi-recommendation", "information-retrieval", "filter-bubble", "machine-learning"]

dependencies = [
    # 基本ライブラリ
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    
    # PyTorch (M1 Mac対応)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    
    # 時系列解析
    "statsmodels>=0.14.0",
    
    # NLP
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    
    # 強化学習
    "gymnasium>=0.28.0",
    
    # ユーティリティ
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
# 開発ツール
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pre-commit>=3.5.0",
    "ipdb>=0.13.13",
]

# ノートブック環境
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
    "nbformat>=5.9.0",
    "nbconvert>=7.11.0",
]

# ドキュメント
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle エラー
    "W",    # pycodestyle 警告
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # 行の長さ
    "B008",  # 関数呼び出しのデフォルト引数
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v",
]
